# Rusty6502

./: .gitignore  Cargo.toml  README.md  mem.dump
src/: asm.rs  cpu.rs  debugger.rs  lib.rs  mem.rs
tests/: mod.rs
tests/instructions/: dec.rs  dex.rs  dey.rs  inc.rs  inx.rs  iny.rs  lda.rs  ldx.rs  ldy.rs  sec.rs  sed.rs  sei.rs  sta.rs  stx.rs  sty.rs  tax.rs  tay.rs  tsx.rs  txa.rs  txs.rs  tya.rs
